--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,9 @@ dist
 .yarn/install-state.gz
 .pnp.*
 node_modules
+
+#terraform
+terraform.tfstate
+terraform.tfstate.*
+.terraform
+.terraform.lock.hcl
