--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@styled-icons/material-outlined": "10.34.0",
     "@styled-icons/material-rounded": "10.34.0",
     "date-fns": "^2.25.0",
+    "joi": "^17.9.2",
     "lodash": "^4.17.21",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
