--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "looker-genai",
   "version": "1.1.0",
-  "description": "Bootstrapped Looker Extension with React and Typescript",
+  "description": "Looker GenAI Extension Demo",
   "main": "dist/bundle.js",
   "author": "Ricardo Geh <gricardo@google.com>",
   "contributors": ["Kaue Gimenes <gimenes@google.com>"],
