fix webpack development config
--disable-host-check was replaced by devServer.allowedHosts
devServer.index was replaced by devServer.static

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "analyze": "export ANALYZE_MODE=static && yarn build",
     "build": "export BABEL_ENV=build && webpack --config webpack.prod.js",
     "clean": "rm -rf dist",
-    "develop": "webpack serve --hot --port 8080 --https --disable-host-check --config webpack.develop.js",
+    "develop": "webpack serve --hot --port 8080 --https --config webpack.develop.js",
     "prebuild": "yarn clean"
   },
   "dependencies": {
