--- a/.deploystack/deploystack.yaml
+++ b/.deploystack/deploystack.yaml
@@ -1,10 +1,7 @@
-title: Github.com
-name: github.com
-description: "This DeployStack is running automatically based on our best guess\nof
-  what the Terraform files present in the github repo you chose \nneed in terms of
-  input \n\n\nIf you would like to see proper information, please file an issue at
-  \nhttps://github.com///issues"
-duration: 0
+title: Looker Extension Gen AI
+name: github.com/looker-open-source/extension-gen-ai
+description: "Deploy automatically the Looker Extension Gen AI Infrastructure"
+duration: 10
 collect_project: true
 collect_project_number: false
 collect_billing_account: false
@@ -20,7 +17,7 @@ configure_gce_instance: false
 documentation_link: ""
 path_terraform: deployment
 path_messages: ""
-path_scripts: ""
+path_scripts: "deployment/scripts"
 projects:
   items: []
   allow_duplicates: false
