--- a/deployment/terraform/.deploystack/deploystack.yaml
+++ b/deployment/terraform/.deploystack/deploystack.yaml
@@ -4,13 +4,13 @@ name: looker-genai-extension
 duration: 5
 documentation_link: https://github.com/looker-open-source/extension-gen-ai/
 collect_project: true
-collect_region: false
+collect_region: true
+region_default: us-central1
 collect_zone: false
-path_terraform: deployment
 products:
-  - info: ""
+  - info: Required permissions
     product: Cloud IAM
-  - info: ""
+  - info: Database - BQ for VertexAI integration
     product: BigQuery
-  - info: "terraform state bucket"
+  - info: Bucket - Stores last terraform state
     product: Cloud Storage
