--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Looker GenAI Extension Demo",
   "main": "dist/bundle.js",
   "author": "Ricardo Geh <gricardo@google.com>",
-  "contributors": ["Kaue Gimenes <gimenes@google.com>"],
+  "contributors": [
+    "Kaue Gimenes <gimenes@google.com>"
+  ],
   "license": "MIT",
   "scripts": {
     "analyze": "export ANALYZE_MODE=static && yarn build",
@@ -56,11 +58,13 @@
     "babel-loader": "^8.2.3",
     "babel-loader-exclude-node-modules-except": "^1.2.1",
     "babel-preset-nano-react-app": "^0.1.0",
+    "css-loader": "^6.10.0",
     "dotenv-webpack": "^8.0.1",
     "minimist": "^1.2.5",
     "nodemon": "^2.0.14",
     "npm-run-all": "^4.1.5",
     "react-hot-loader": "^4.13.0",
+    "style-loader": "^3.3.4",
     "typescript": "4.4.4",
     "webpack": "^5.10.0",
     "webpack-bundle-analyzer": "^4.5.0",
