--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "MIT",
   "scripts": {
     "analyze": "export ANALYZE_MODE=static && yarn build",
-    "build": "export BABEL_ENV=build && webpack --config webpack.prod.js",
+    "build-ts": "tsc",
+    "build-webpack-prod": "BABEL_ENV=build webpack --config webpack.prod.js",
+    "build-webpack-dev": "webpack serve --hot --port 8080 --https --config webpack.develop.js",
+    "build": "npm run build-ts && npm run build-webpack-prod",
     "clean": "rm -rf dist",
-    "develop": "webpack serve --hot --port 8080 --https --config webpack.develop.js",
+    "develop": "npm run build-webpack-dev",
     "prebuild": "yarn clean"
   },
   "dependencies": {
@@ -26,7 +29,6 @@
     "@styled-icons/material": "10.34.0",
     "@styled-icons/material-outlined": "10.34.0",
     "@styled-icons/material-rounded": "10.34.0",
-    "date-fns": "^2.25.0",
     "joi": "^17.9.2",
     "lodash": "^4.17.21",
     "react": "^16.14.0",
@@ -48,8 +50,8 @@
     "@babel/preset-typescript": "^7.16.0",
     "@babel/runtime": "^7.16.0",
     "@types/lodash": "^4.14.176",
-    "@types/node": "^14.14.12",
-    "@types/react": "^16.14.2",
+    "@types/node": "^18.19.26",
+    "@types/react": "^16.14.59",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.5",
     "@types/readable-stream": "^2.3.5",
