--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,13 @@
   "compilerOptions": {
     "jsx": "react",
     "lib": ["dom", "es2015"],
+    "types": ["node"],
     "sourceMap": true,
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "outDir": "dist/tsc",
+    "skipLibCheck": true
   },
-  "exclude": ["node_modules"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules/**/*"]
 }
